--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/4GeeksAcademy/vanillajs-hello#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.3.1",
     "breathecode-dom": "^1.0.0",
     "jquery": "^3.4.1",
@@ -58,7 +59,7 @@
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gh-pages": "^1.2.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "parse-github-url": "^1.0.2",
     "prettier": "^1.18.2",
     "prettier-webpack-plugin": "^1.2.0",
